feat: add logo in col-user

--- a/day-1/index.html
+++ b/day-1/index.html
@@ -9,20 +9,30 @@
 </head>
 
 <body>
-    <div class="container">
-        
+    <!-- CONTAINER CONTENUTO PRINCIPALE -->
+    <div class="main-container">
+        <!-- COLONNA PULSANTI PER L'UTENTE + LOGO -->
         <div class="col-user">
-            col-1
-        </div>
+            <div id="logo">
+                <img src="img/logo.svg" alt="Logo Spotify">
+            </div>
 
+
+        </div>
+        <!-- COLONNA PULSANTI PER L'UTENTE + LOGO -->
+
+        <!-- COLONNA PIU' GRANDE PER IL CONTENUTO PRINCIPALE -->
         <div class="col-content">
+            <!-- PARTE SUPERIORE DEL SITO ALL'INTERNO DEL CONTENUTO PRINCIPALE -->
             <div class="header">
                 header
             </div>
+            <!-- /PARTE SUPERIORE DEL SITO ALL'INTERNO DEL CONTENUTO PRINCIPALE -->
             col2
         </div>
-
+        <!-- COLONNA PIU' GRANDE PER IL CONTENUTO PRINCIPALE -->
     </div>
+     <!-- /CONTAINER CONTENUTO PRINCIPALE -->
 
     <footer>
 
