--- a/day-1/index.html
+++ b/day-1/index.html
@@ -4,8 +4,19 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spotify App</title>
+    <link rel="icon" type="image/vnd.icon" href="img/favicon.ico">
+    
+    <!-- FONT Montserrat -->
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <!-- FONT Montserrat -->
 
+    <!-- FONT AWESOME -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <!-- FONT AWESOME -->
+
+    <!-- FOGLIO DI STILE PRINCIPALE -->
     <link rel="stylesheet" href="css/style.css">
+     <!-- FOGLIO DI STILE PRINCIPALE -->
 </head>
 
 <body>
@@ -17,17 +28,25 @@
                 <img src="img/logo.svg" alt="Logo Spotify">
             </div>
 
-
+            <nav class="user-menu">
+                <ul>
+                    <li><a href="#"><img src="img/home.svg" alt="Home">Home</a></li>
+                    <li><a href="#"><img src="img/search.svg" alt="Cerca">Cerca</a></li>
+                    <li><a href="#"><img src="img/libreria.svg" alt="Libreria">La tua Libreria</a></li>
+                </ul>
+            </nav>
         </div>
-        <!-- COLONNA PULSANTI PER L'UTENTE + LOGO -->
+         <!-- COLONNA PULSANTI PER L'UTENTE + LOGO -->
 
         <!-- COLONNA PIU' GRANDE PER IL CONTENUTO PRINCIPALE -->
         <div class="col-content">
+
             <!-- PARTE SUPERIORE DEL SITO ALL'INTERNO DEL CONTENUTO PRINCIPALE -->
             <div class="header">
                 header
             </div>
             <!-- /PARTE SUPERIORE DEL SITO ALL'INTERNO DEL CONTENUTO PRINCIPALE -->
+             
             col2
         </div>
         <!-- COLONNA PIU' GRANDE PER IL CONTENUTO PRINCIPALE -->
