feat: create base for user section

--- a/day-1/index.html
+++ b/day-1/index.html
@@ -35,6 +35,28 @@
                     <li><a href="#"><img src="img/libreria.svg" alt="Libreria">La tua Libreria</a></li>
                 </ul>
             </nav>
+
+            <div class="user-playlist">
+                <h4>Playlists</h4>
+                <ul>
+                    <li><i class="fa-solid fa-plus"></i><a href="#"> crea playlist</a></li>
+                    <li><a href="#">nome playlist</a></li>
+                    <li><a href="#">nome playlist</a></li>
+                    <li><a href="#">nome playlist</a></li>
+                    <li><a href="#">nome playlist</a></li>
+                    <li><a href="#">nome playlist</a></li>
+                </ul>
+            </div>
+
+            <div class="user">
+                <div class="download">
+                    <a href="#"><img src="img/download.svg" alt="">Installa App</a>
+                </div>
+                <div class="user-info">
+                    2
+                </div>
+            </div>
+
         </div>
          <!-- COLONNA PULSANTI PER L'UTENTE + LOGO -->
 
@@ -46,7 +68,7 @@
                 header
             </div>
             <!-- /PARTE SUPERIORE DEL SITO ALL'INTERNO DEL CONTENUTO PRINCIPALE -->
-             
+
             col2
         </div>
         <!-- COLONNA PIU' GRANDE PER IL CONTENUTO PRINCIPALE -->
