--- a/day-1/index.html
+++ b/day-1/index.html
@@ -50,7 +50,8 @@
 
             <div class="user">
                 <div class="download">
-                    <a href="#"><img src="img/download.svg" alt="">Installa App</a>
+                   <img src="img/download.svg" alt="download">
+                   <a href="#">Installa l'app</a>
                 </div>
                 <div class="user-info">
                     2
