feat: finish panel users for desktop

--- a/day-1/index.html
+++ b/day-1/index.html
@@ -49,12 +49,15 @@
             </div>
 
             <div class="user">
-                <div class="download">
+                <div class="user-flex">
                    <img src="img/download.svg" alt="download">
                    <a href="#">Installa l'app</a>
                 </div>
                 <div class="user-info">
-                    2
+                    <div class="user-flex">
+                        <img class="profile-img" src="img/profile.svg" alt="Immagine Profilo di Giuseppe Genova">
+                        <a href="#">Giuseppe Genova</a>
+                     </div>
                 </div>
             </div>
 
