--- a/day-1/index.html
+++ b/day-1/index.html
@@ -25,14 +25,15 @@
         <!-- COLONNA PULSANTI PER L'UTENTE + LOGO -->
         <div class="col-user">
             <div id="logo">
-                <img src="img/logo.svg" alt="Logo Spotify">
+                <img  class="logo-desktop" src="img/logo.svg" alt="Logo Spotify">
+                <img class="logo-mobile"  src="img/logo-small.svg" alt="Logo Spotify">
             </div>
 
             <nav class="user-menu">
                 <ul>
-                    <li><a href="#"><img src="img/home.svg" alt="Home">Home</a></li>
-                    <li><a href="#"><img src="img/search.svg" alt="Cerca">Cerca</a></li>
-                    <li><a href="#"><img src="img/libreria.svg" alt="Libreria">La tua Libreria</a></li>
+                    <li><a href="#"><img src="img/home.svg" alt="Home"><span>Home</span></a></li>
+                    <li><a href="#"><img src="img/search.svg" alt="Cerca"><span>Cerca</span></a></li>
+                    <li><a href="#"><img src="img/libreria.svg" alt="Libreria"><span>La tua libreria</span></a></li>
                 </ul>
             </nav>
 
