feat: add hover effects on user menu (mobile)

--- a/day-1/index.html
+++ b/day-1/index.html
@@ -40,7 +40,7 @@
             <div class="user-playlist">
                 <h4>Playlists</h4>
                 <ul>
-                    <li><i class="fa-solid fa-plus"></i><a href="#"> crea playlist</a></li>
+                    <li><a href="#"><i class="icon-add-playlist fa-solid fa-plus"></i> crea playlist</a></li>
                     <li><a href="#">nome playlist</a></li>
                     <li><a href="#">nome playlist</a></li>
                     <li><a href="#">nome playlist</a></li>
