feat: create button for upgrade

--- a/day-2/index.html
+++ b/day-2/index.html
@@ -69,14 +69,12 @@
 
         <!-- COLONNA PIU' GRANDE PER IL CONTENUTO PRINCIPALE -->
         <div class="col-content">
-
             <!-- PARTE SUPERIORE DEL SITO ALL'INTERNO DEL CONTENUTO PRINCIPALE -->
-            <div class="header">
-
+            <div class="content-header">
+                <button class="upgrade-btn">Effettua l'upgrade</button>
             </div>
             <!-- /PARTE SUPERIORE DEL SITO ALL'INTERNO DEL CONTENUTO PRINCIPALE -->
 
-            col2
         </div>
         <!-- COLONNA PIU' GRANDE PER IL CONTENUTO PRINCIPALE -->
     </div>
