--- a/day-2/index.html
+++ b/day-2/index.html
@@ -74,7 +74,16 @@
                 <button class="upgrade-btn">Effettua l'upgrade</button>
             </div>
             <!-- /PARTE SUPERIORE DEL SITO ALL'INTERNO DEL CONTENUTO PRINCIPALE -->
-
+            <div class="genre-menu">
+                <ul>
+                    <li><a href="#">In evidenza</a></li>
+                    <li><a href="#">podcast</a></li>
+                    <li><a href="#">classifiche</a></li>
+                    <li><a href="#">generi e mood</a></li>
+                    <li><a href="#">nuove uscite</a></li>
+                    <li><a href="#">scopri</a></li>
+                </ul>
+            </div>
         </div>
         <!-- COLONNA PIU' GRANDE PER IL CONTENUTO PRINCIPALE -->
     </div>
