feat:fix text for card

--- a/day-2/index.html
+++ b/day-2/index.html
@@ -91,35 +91,37 @@
                     <div class="card">
                         <img src="img/metal_lifting.jpg" alt="Metal music" class="img-card">
                         <p class="song-title">Heavy Metal</p>
-                        <p class="song-sub-title">nothing else matters</p>
+                        <p class="song-sub-title">W i nirvana</p>
                     </div>
                     <div class="card">
-                        <img src="img/metal_lifting.jpg" alt="Metal music" class="img-card">
+                        <img src="img/stranger.jpeg" alt="Strnager Things" class="img-card">
+                        <p class="song-title">Stranger Things. vol. 1 (a netflix Original Series Soundtrack)</p>
+                        <p class="song-sub-title">Kyle Dixon & Michael Stein</p>
+                    </div>
+                    <div class="card">
+                        <img src="img/aquietplace.jpeg" alt="A quiet a Place" class="img-card">
                         <p class="song-title">Heavy Metal</p>
                         <p class="song-sub-title">nothing else matters</p>
                     </div>
                     <div class="card">
-                        <img src="img/metal_lifting.jpg" alt="Metal music" class="img-card">
+                        <img src="img/split.jpeg" alt="Split" class="img-card">
                         <p class="song-title">Heavy Metal</p>
                         <p class="song-sub-title">nothing else matters</p>
                     </div>
                     <div class="card">
-                        <img src="img/metal_lifting.jpg" alt="Metal music" class="img-card">
+                        <img src="img/cure.jpeg" alt="Cure" class="img-card">
                         <p class="song-title">Heavy Metal</p>
                         <p class="song-sub-title">nothing else matters</p>
                     </div>
                     <div class="card">
-                        <img src="img/metal_lifting.jpg" alt="Metal music" class="img-card">
-                        <p class="song-title">Heavy Metal</p>
-                        <p class="song-sub-title">nothing else matters</p>
-                    </div>
-                    <div class="card">
-                        <img src="img/metal_lifting.jpg" alt="Metal music" class="img-card">
+                        <img src="img/sinister.jpeg" alt="Sinister" class="img-card">
                         <p class="song-title">Heavy Metal</p>
                         <p class="song-sub-title">nothing else matters</p>
                     </div>
                 </div>
-                <h2 class="recently-title">Recently played</h2>
+
+                <h2 class="create-for">Creato per Giuseppe Genova</h2>
+                <h5 class="create-for-subtitle">Più ascolti più accurati saranno i suggerimenti</h5>
                 <div class="recently-song">
                     <div class="card">
                         <img src="img/metal_lifting.jpg" alt="Metal music" class="img-card">
