--- a/day-2/index.html
+++ b/day-2/index.html
@@ -124,34 +124,25 @@
                 <h5 class="create-for-subtitle">Più ascolti più accurati saranno i suggerimenti</h5>
                 <div class="recently-song">
                     <div class="card">
-                        <img src="img/metal_lifting.jpg" alt="Metal music" class="img-card">
-                        <p class="song-title">Heavy Metal</p>
-                        <p class="song-sub-title">nothing else matters</p>
+                        <img src="img/mixdaily.jpeg" alt="Metal music" class="img-card">
+                        <p class="song-title">Daily mix 1</p>
                     </div>
                     <div class="card">
-                        <img src="img/metal_lifting.jpg" alt="Metal music" class="img-card">
-                        <p class="song-title">Heavy Metal</p>
-                        <p class="song-sub-title">nothing else matters</p>
+                        <img src="img/radar.jpeg" alt="Metal music" class="img-card">
+                        <p class="song-title">Release Radar</p>
+                    </div>
+                </div>
+
+                <h2 class="create-for">Artisti più popolari</h2>
+                <h5 class="create-for-subtitle">Più ascolti più accurati saranno i suggerimenti</h5>
+                <div class="recently-song">
+                    <div class="card">
+                        <img src="img/youg.jpeg" alt="Metal music" class="img-card">
+                        <p class="song-title">Daily mix 1</p>
                     </div>
                     <div class="card">
-                        <img src="img/metal_lifting.jpg" alt="Metal music" class="img-card">
-                        <p class="song-title">Heavy Metal</p>
-                        <p class="song-sub-title">nothing else matters</p>
-                    </div>
-                    <div class="card">
-                        <img src="img/metal_lifting.jpg" alt="Metal music" class="img-card">
-                        <p class="song-title">Heavy Metal</p>
-                        <p class="song-sub-title">nothing else matters</p>
-                    </div>
-                    <div class="card">
-                        <img src="img/metal_lifting.jpg" alt="Metal music" class="img-card">
-                        <p class="song-title">Heavy Metal</p>
-                        <p class="song-sub-title">nothing else matters</p>
-                    </div>
-                    <div class="card">
-                        <img src="img/metal_lifting.jpg" alt="Metal music" class="img-card">
-                        <p class="song-title">Heavy Metal</p>
-                        <p class="song-sub-title">nothing else matters</p>
+                        <img src="img/einaudi.jpeg" alt="Metal music" class="img-card">
+                        <p class="song-title">Release Radar</p>
                     </div>
                 </div>
             </div>
