feat:add last card and add border radius in last card

--- a/day-2/index.html
+++ b/day-2/index.html
@@ -137,11 +137,11 @@
                 <h5 class="create-for-subtitle">Più ascolti più accurati saranno i suggerimenti</h5>
                 <div class="recently-song">
                     <div class="card">
-                        <img src="img/youg.jpeg" alt="Metal music" class="img-card">
+                        <img src="img/youg.jpeg" alt="Metal music" class="img-card round-img">
                         <p class="song-title">Daily mix 1</p>
                     </div>
                     <div class="card">
-                        <img src="img/einaudi.jpeg" alt="Metal music" class="img-card">
+                        <img src="img/einaudi.jpeg" alt="Metal music" class="img-card round-img">
                         <p class="song-title">Release Radar</p>
                     </div>
                 </div>
