--- a/day-2/index.html
+++ b/day-2/index.html
@@ -88,11 +88,20 @@
                 </div>
                 <h2 class="recently-title">Recently played</h2>
                 <div class="recently-song">
+
                     <div class="card">
-                        <img src="img/metal_lifting.jpg" alt="Metal music" class="img-card">
-                        <p class="song-title">Heavy Metal</p>
-                        <p class="song-sub-title">W i nirvana</p>
+                        <div class="container-img">
+                            <a href="#"><img src="img/metal_lifting.jpg" alt="Metal music" class="img-card"></a>
+                            <div class="overlay">
+                                <i class="play fa-regular fa-circle-play"></i>
+                            </div>
+                        </div>
+                        <div class="card-text">
+                            <p class="song-title">Heavy Metal</p>
+                            <p class="song-sub-title">W i nirvana</p>
+                        </div>
                     </div>
+
                     <div class="card">
                         <img src="img/stranger.jpeg" alt="Strnager Things" class="img-card">
                         <p class="song-title">Stranger Things. vol. 1 (a netflix Original Series Soundtrack)</p>
