feat:apply effect hover on all card

--- a/day-2/index.html
+++ b/day-2/index.html
@@ -103,29 +103,64 @@
                     </div>
 
                     <div class="card">
-                        <img src="img/stranger.jpeg" alt="Strnager Things" class="img-card">
-                        <p class="song-title">Stranger Things. vol. 1 (a netflix Original Series Soundtrack)</p>
-                        <p class="song-sub-title">Kyle Dixon & Michael Stein</p>
+                        <div class="container-img">
+                            <a href="#"><img src="img/stranger.jpeg" alt="Metal music" class="img-card"></a>
+                            <div class="overlay">
+                                <i class="play fa-regular fa-circle-play"></i>
+                            </div>
+                        </div>
+                        <div class="card-text">
+                            <p class="song-title">Stranger Things, Vol. 1 (a Netflix Original Series Soundtrack) </p>
+                            <p class="song-sub-title">Kuyle dixon & Michael Stein </p>
+                        </div>
                     </div>
                     <div class="card">
-                        <img src="img/aquietplace.jpeg" alt="A quiet a Place" class="img-card">
-                        <p class="song-title">Heavy Metal</p>
-                        <p class="song-sub-title">nothing else matters</p>
+                        <div class="container-img">
+                            <a href="#"><img src="img/aquietplace.jpeg" alt="Metal music" class="img-card"></a>
+                            <div class="overlay">
+                                <i class="play fa-regular fa-circle-play"></i>
+                            </div>
+                        </div>
+                        <div class="card-text">
+                            <p class="song-title">A quiet place</p>
+                            <p class="song-sub-title">subtitle</p>
+                        </div>
                     </div>
                     <div class="card">
-                        <img src="img/split.jpeg" alt="Split" class="img-card">
-                        <p class="song-title">Heavy Metal</p>
-                        <p class="song-sub-title">nothing else matters</p>
+                        <div class="container-img">
+                            <a href="#"><img src="img/split.jpeg" alt="Metal music" class="img-card"></a>
+                            <div class="overlay">
+                                <i class="play fa-regular fa-circle-play"></i>
+                            </div>
+                        </div>
+                        <div class="card-text">
+                            <p class="song-title">Split</p>
+                            <p class="song-sub-title">Subtitle</p>
+                        </div>
                     </div>
                     <div class="card">
-                        <img src="img/cure.jpeg" alt="Cure" class="img-card">
-                        <p class="song-title">Heavy Metal</p>
-                        <p class="song-sub-title">nothing else matters</p>
+                        <div class="container-img">
+                            <a href="#"><img src="img/sinister.jpeg" alt="Metal music" class="img-card"></a>
+                            <div class="overlay">
+                                <i class="play fa-regular fa-circle-play"></i>
+                            </div>
+                        </div>
+                        <div class="card-text">
+                            <p class="song-title">Sinister</p>
+                            <p class="song-sub-title">Subtitle</p>
+                        </div>
                     </div>
                     <div class="card">
-                        <img src="img/sinister.jpeg" alt="Sinister" class="img-card">
-                        <p class="song-title">Heavy Metal</p>
-                        <p class="song-sub-title">nothing else matters</p>
+                        <div class="container-img">
+                            <a href="#"><img src="img/cure.jpeg" alt="Metal music" class="img-card"></a>
+                            <div class="overlay">
+                                <i class="play fa-regular fa-circle-play"></i>
+                            </div>
+                        </div>
+                        <div class="card-text">
+                            <p class="song-title">A cure of wellness</p>
+                            <p class="song-sub-title">W i nirvana</p>
+                        </div>
                     </div>
                 </div>
 
