feat: add structure base and css for footer

--- a/day-2/index.html
+++ b/day-2/index.html
@@ -199,6 +199,43 @@
 
         <div class="footer-menu">
             
+            <div class="now-play">
+                <div class="now-play-img">
+                    <img src="img/player_left.jpg" alt="">
+                </div>
+                    <div class="now-play-text">
+                        <p class="now-play-title">Skiantos</p>
+                        <p class="now-play-subtitle">I Gelati</p>
+                    </div>
+                <div class="now-play-icon">
+                    <i class="fa-regular fa-heart"></i>
+                    <i class="fa-regular fa-folder"></i>
+                </div>
+            </div>
+
+            <div class="player">
+                <div class="control-panel">
+                    <i class="fa-solid fa-shuffle"></i>
+                    <i class="fa-solid fa-backward-step"></i>
+                    <i class="play fa-regular fa-circle-play"></i>
+                    <i class="fa-solid fa-forward-step"></i>
+                    <i class="fa-solid fa-rotate-right"></i>
+                </div>
+                <div class="control-panel-progress">
+                    <span>0:25</span>
+                    <div class="progress">progress bar</div>
+                    <span>4:25</span>
+                </div>
+            </div>
+
+            <div class="player-volume">
+                <div class="control-volume">
+                    <i class="fa-solid fa-list-ul"></i>
+                    <i class="fa-solid fa-display"></i>
+                    <i class="fa-solid fa-volume-high"></i>
+                </div>
+                <div class="progress">progress volume</div>
+            </div>
         </div>
 
     </footer>
